<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sto.evgeny.birthdays.activity.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>
