<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context="sto.evgeny.birthdays.activity.MainActivity"
    tools:ignore="MergeRootFrame" >

    <View
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView android:id="@+id/currentDateText" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center" 
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:background="@color/lightBlue"/>

    <View
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    
    <ListView android:id="@+id/contactsListViewShort"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
</LinearLayout>